--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -12,12 +12,6 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
-    env:
-      TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-      TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-      # (Optional safety: some setups use these names)
-      TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-      TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
 
     steps:
       - uses: actions/checkout@v4
@@ -34,12 +28,17 @@ jobs:
 
       - name: Build + publish GitHub Release
         uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           tagName: ${{ github.ref_name }}
           releaseName: "MegaClient ${{ github.ref_name }}"
           releaseBody: "Automated build."
           draft: false
           prerelease: false
-          # These ensure updater assets are uploaded
           uploadUpdaterJson: true
           uploadUpdaterSignatures: true
